@@ -3,15 +3,19 @@ package net.starly.armorstandmanager.command.tabcomplete;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
+import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class ArmorStandMessageTabCompleter implements TabCompleter {
 
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        return List.of("<메시지>");
+        if (args.length == 1) return StringUtil.copyPartialMatches(args[0], List.of("<메시지>"), new ArrayList<>());
+        return Collections.emptyList();
     }
 }
